[tool.poetry]
name = "bigearthnet-docs"
version = "0.1.0"
description = "A user-friendly introduction to the multi-modal BigEarthNet dataset."
authors = ["Kai Norman Clasen <k.clasen@protonmail.com>"]
readme = "README.md"
packages = [{include = "igearthnet_docs"}]
license = "MIT"
homepage = "https://kai-tub.github.io/ben-docs"
repository = "https://github.com/kai-tub/ben-docs/"
documentation = "https://kai-tub.github.io/ben-docs"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.docs.dependencies]
furo = "^2022.12.7"
myst-nb = "^0.17.1"
sphinx-autobuild = "^2021.3.14"
common-nb-preprocessors = "^1.1.1"
linkify-it-py = "^2.0.0"
bigearthnet-encoder = "^0.3.0"
bigearthnet-common = "^2.8.0"
bigearthnet-patch-interface = "^0.1.2"
bigearthnet-gdf-builder = "^0.1.10"
mapclassify = "^2.4.3"
matplotlib = "^3.6.2"
geopandas = "^0.12.2"
diskcache = "^5.4.0"
appdirs = "^1.4.4"
sphinx-comments = "^0.0.3"
sphinxcontrib-bibtex = "^2.5.0"
folium = "^0.14.0"
furo-myst-nb-css-fixes = "^0.1.1"
jupyter = "^1.0.0"
notebook = "^6.5.2"
jupyterlab = "^3.5.2"


[tool.poetry.group.lint.dependencies]
nbqa = "^1.6.1"
jupytext = "^1.14.4"
ruff = "^0.0.218"
black = {extras = ["jupyter"], version = "^22.12.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
